--- a/vue2.5/TodoList/index_jquery.html
+++ b/vue2.5/TodoList/index_jquery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>TodoList</title>
-    <script src="./jquery.js"></script>
+    <script src="jquery.js"></script>
 </head>
 <body>
     <div id="app">
